Autenticação Google e view login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="descricao">Descrição</string>
     <string name="dataTermino">Data de Término</string>
     <string name="salvar">Salvar</string>
+    <string name="nomeUsuario">Usuário</string>
 </resources>
